--- a/view/not-found.ejs
+++ b/view/not-found.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
-<%- include ('head2.ejs') %>
+<%- include ('head.ejs') %>
 <title>Not found - Bamboos</title>
 
 <body>
