--- a/view/index.ejs
+++ b/view/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
-<% include ('head2.ejs') %>
+<% include ('head.ejs') %>
 <body>
   <%- include ('header.ejs') %>
   <main>
