--- a/view/header.ejs
+++ b/view/header.ejs
@@ -1,10 +1,12 @@
 <header>
     <nav>
-      <ul>
-        <li><a href="/add">Profiel aanmaken</a></li>
-        <li><a href="#">Logo</a></li>
-        <li><a href="#">Matches</a></li>
-      </ul>
+        <ul>
+            <li>
+                <img src="images/icons/user.svg" alt="">
+            </li>
+            <li>
+                <img src="images/icons/chat.svg" alt="">
+            </li>
+        </ul>
     </nav>
-  </header>
-  
+</header>
