--- a/view/matches2.ejs
+++ b/view/matches2.ejs
@@ -2,12 +2,18 @@
 <html lang="nl">
 <%- include ('head.ejs') %>
 <title>Matches - Bamboos</title>
+
 <body>
   <%- include ('header.ejs') %>
+
+
   <h1>Matches</h1>
   <% for (var index = 0; index < data.length; index++) { %>
-  <h2><a href="/<%= data[index]._id %>"><%= data[index].naam %></a></h2>
-  <p><%= data[index].leeftijd %></p>
+  <article class="profile">
+    <h2><a href="/<%= data[index]._id %>"><%= data[index].naam %></a></h2>
+    <p><%= data[index].leeftijd %></p>
+  </article>
   <% } %>
 </body>
+
 </html>
