--- a/view/login.ejs
+++ b/view/login.ejs
@@ -23,7 +23,7 @@
         <button type="submit" name="button">inloggen</button>
       </form>
 
-    <a href="/registratie">registreren</a>
+    <a href="/register">registreren</a>
   </body>
 </html>
 
