fixen overview page

--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -27,7 +27,7 @@
             <ul>
                 <% for (var index = 0; index < data.matches.length; index++) { %>
                 <li>
-                    <%= data.matches[index].user %>
+                    <%= data.matches[index].username %>
                 </li>
 
                 <% } %>
