passport (niet af)

--- a/view/register.ejs
+++ b/view/register.ejs
@@ -23,12 +23,12 @@
 
         <fieldset>
           <label for="emailadres">emailadres</label>
-          <input type="email" name="emailadres" placeholder="emailadres" />
+          <input type="email" name="email" placeholder="emailadres" />
         </fieldset>
 
         <fieldset>
           <label for="pass">Wachtwoord</label>
-          <input type="password" name="wachtwoord" required />
+          <input type="password" name="password" required />
         </fieldset>
         <button type="submit">registreer</button>
       </form>
