--- a/view/login.ejs
+++ b/view/login.ejs
@@ -5,25 +5,19 @@
   </head>
   <body class="login">
     <h1>Inloggen</h1>
-      <form action="/login" method=post>
-        <fieldset>
-          <label for="emailadres">emailadres</label>
-          <input
-            type="email"
-            name="emailadres"
-            placeholder="emailadres"
-            id="emailadres"
-          />
-        </fieldset>
+    <form action="/login" method="post">
+      <fieldset>
+        <label for="emailadres">emailadres</label>
+        <input type="email" name="email" placeholder="emailadres" id="email" />
+      </fieldset>
 
-        <fieldset>
-          <label for="pass">Wachtwoord</label>
-          <input type="password" id="pass" name="wachtwoord" required />
-        </fieldset>
-        <button type="submit" name="button">inloggen</button>
-      </form>
+      <fieldset>
+        <label for="pass">Wachtwoord</label>
+        <input type="password" id="pass" name="password" required />
+      </fieldset>
+      <button type="submit" name="button">inloggen</button>
+    </form>
 
     <a href="/register">registreren</a>
   </body>
 </html>
-
