--- a/view/matches.ejs
+++ b/view/matches.ejs
@@ -5,7 +5,7 @@
 
 <body>
   <%- include ('header.ejs') %>
-
+  <a href="/logout">Logout</a>
 
   <h1>Matches</h1>
   <% for (var index = 0; index < data.matches.length; index++) { %>
