--- a/view/detail.ejs
+++ b/view/detail.ejs
@@ -6,28 +6,22 @@
 
 <body>
   <%- include ('header.ejs') %>
-<a href="/matches">Back to matches</a>
+  <a href="/matches">Back to matches</a>
 
   <h1>
     <%= data.naam %>
   </h1>
   <% if (data.foto) { %>
-<img
-  alt
-  src="/upload/<%= data.foto %>"
->
-<% } %>
+  <img alt src="/upload/<%= data.foto %>">
+  <% } %>
   <p>
     <%= data.leeftijd %>
   </p>
   <p>
     <%= data.bio %>
   </p>
-  <button
-      id=js-remove
-      data-id="<%= data._id %>"
-    >Unmatch</button>
-  <script src=/index.js></script>
-</body>
+  <a href="mailto:<%= data.userLogin.email%>">Message</a>
 
-</html>
+  <h1></h1>
+  <button id=js-remove data-id="<%= data._id %>">Unmatch</button>
+  <script src=/index.js> </script> </body> </html>
