--- a/view/detail.ejs
+++ b/view/detail.ejs
@@ -20,7 +20,7 @@
   <p>
     <%= data.bio %>
   </p>
-  <a href="mailto:<%= data.userLogin.email%>">Message</a>
+  <a class="linkButton" href="mailto:<%= data.userLogin.email%>">Message</a>
 
   <h1></h1>
   <button id=js-remove data-id="<%= data._id %>">Unmatch</button>
