--- a/view/overview.ejs
+++ b/view/overview.ejs
@@ -33,7 +33,7 @@
                 <% } %>
             </ul>
         </section>
-        <a href="/matches">See matches</a>
+        <a href="/matches" class="linkButton">See matches</a>
         <a class="linkButton" href="/findMatch">Try again</a>
 
         <form action="/changeName" method="POST" class="formulier">
