--- a/view/register.ejs
+++ b/view/register.ejs
@@ -15,7 +15,7 @@
      
     <section class="login">
       <h1>Registratie</h1>
-      <form action="/registerUser" method="post">
+      <form action="/register" method="post">
         <fieldset>
           <label for="username">username</label>
           <input type="text" name="username" placeholder="username" />
