af tot overview

--- a/view/findMatch.ejs
+++ b/view/findMatch.ejs
@@ -8,7 +8,7 @@
 
     <main>
         <section class="choice">
-            <form action="/postQuestionAnswers" method="POST" id="carForm">
+            <form action="/findMatch" method="POST" id="carForm">
                 <h1>Choose one</h1>
                 <h2>Pick the one you like to most, to find your match!</h2>
                 <div>
