--- a/view/createUser.ejs
+++ b/view/createUser.ejs
@@ -4,7 +4,7 @@
 <title>Profiel aanmaken - Bamboos</title>
 <h1>Profiel aanmaken</h1>
 
-<form action="/createProfile" method=post enctype=multipart/form-data class="add-profile">
+<form action="/add" method=post enctype=multipart/form-data class="add-profile">
   <label>
     Foto
     <input
