--- a/view/detail.ejs
+++ b/view/detail.ejs
@@ -6,22 +6,28 @@
 
 <body>
   <%- include ('header.ejs') %>
-  <a href="/matches">Back to matches</a>
+<a href="/matches">Back to matches</a>
 
   <h1>
     <%= data.naam %>
   </h1>
   <% if (data.foto) { %>
-  <img alt src="/upload/<%= data.foto %>">
-  <% } %>
+<img
+  alt
+  src="/upload/<%= data.foto %>"
+>
+<% } %>
   <p>
     <%= data.leeftijd %>
   </p>
   <p>
     <%= data.bio %>
   </p>
-  <a class="linkButton" href="mailto:<%= data.userLogin.email%>">Message</a>
+  <button
+      id=js-remove
+      data-id="<%= data._id %>"
+    >Unmatch</button>
+  <script src=/index.js></script>
+</body>
 
-  <h1></h1>
-  <button id=js-remove data-id="<%= data._id %>">Unmatch</button>
-  <script src=/index.js> </script> </body> </html>
+</html>
