toevoegen mail knop

--- a/view/detail.ejs
+++ b/view/detail.ejs
@@ -23,6 +23,7 @@
   <p>
     <%= data.bio %>
   </p>
+  <a class="linkButton" href="mailto:<%= data.userLogin.email%>">Message</a>
   <button
       id=js-remove
       data-id="<%= data._id %>"
